--- a/slides/references.bib
+++ b/slides/references.bib
@@ -69,3 +69,11 @@
 	url = {http://dx.doi.org/10.1371/journal.pone.0253450},
 	langid = {en}
 }
+
+
+@book{montgomery2021introduction,
+  title={Introduction to linear regression analysis},
+  author={Montgomery, Douglas C and Peck, Elizabeth A and Vining, G Geoffrey},
+  year={2021},
+  publisher={John Wiley \& Sons}
+}
