--- a/ae/ae-04-multicollinearity.qmd
+++ b/ae/ae-04-multicollinearity.qmd
@@ -57,13 +57,6 @@ rail_trail <- read_csv("data/rail_trail.csv")
 
 -   Are there any coefficients that may be not what you expected?
 
-```{r}
-#| label: ex-1
-
-# add code here
-
-```
-
 ## Exercise 2
 
 Use the formula
@@ -74,51 +67,21 @@ $$
 
 to calculate the VIF for `avgtemp`.
 
-```{r}
-#| label: ex-2
-
-# add code here
-
-```
-
-Then, use the design matrix $\mathbf{X}$ to check your answer.
-
-```{r}
-#| label: ex-2-pt2
-
-# add code here
-```
-
 ## Exercise 3
 
 Based on the VIF from the previous exercise, does `avgtemp` have a linear dependency with one or more other predictors? Explain.
 
 ## Exercise 4
 
--   Fill in the name of the model from Exercise 1 to calculate VIF for all predictors. (Remove `#| eval: false` after you've filled in the code.)
+-   Use the `vif` function to compute VIF for the predictors in Exercise 1.
 
--   Are there predictors with linear dependencies? If so, which ones?
-
-```{r}
-#| label: ex-4
-#| eval: false
-
-vif(____)
-
-```
+-   Are there predictors with near-linear dependencies? If so, which ones?
 
 # Part 2
 
 ## Exercise 5
 
 Let's address the issue of mulitcollinearity. Choose a strategy to address the multicollinearity. Then, select a final model.
-
-```{r}
-#| label: ex-5
-
-# add code here
-
-```
 
 # Submission
 
