--- a/ae/ae-04-multicollinearity.qmd
+++ b/ae/ae-04-multicollinearity.qmd
@@ -1,6 +1,6 @@
 ---
 title: "AE 04: Multicollinearity"
-date: "February 26, 2025"
+date: "February 27, 2025"
 editor: visual
 ---
 
@@ -73,7 +73,7 @@ Based on the VIF from the previous exercise, does `avgtemp` have a linear depend
 
 ## Exercise 4
 
--   Use the `vif` function to compute VIF for the predictors in Exercise 1.
+-   Use the `vif` function to compute VIF for all the predictors in Exercise 1.
 
 -   Are there predictors with near-linear dependencies? If so, which ones?
 
@@ -81,7 +81,7 @@ Based on the VIF from the previous exercise, does `avgtemp` have a linear depend
 
 ## Exercise 5
 
-Let's address the issue of mulitcollinearity. Choose a strategy to address the multicollinearity. Then, select a final model.
+Let's address the issue of multicollinearity. Choose a strategy to address the multicollinearity. Apply it, then use relevant statistics to select a final model.
 
 # Submission
 
