--- a/slides/14-variable-transformations.qmd
+++ b/slides/14-variable-transformations.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Multicollinearity cont'd"
+title: " Variable transformations"
 author: "Prof. Maria Tackett"
 date: "2025-03-04"
 date-format: "MMM DD, YYYY"
@@ -29,20 +29,6 @@ knitr:
 bibliography: references.bib
 ---
 
-## Announcements
-
--   Exam corrections (optional) due TODAY at 11:59pm
-
-    -   See [assignment on Canvas](https://canvas.duke.edu/courses/51767/assignments/220984)
-
--   Team Feedback (email from TEAMMATES) due TODAY at 11:59pm (check email)
-
--   Next project milestone: Exploratory data analysis due March 20
-
-    -   Work on it in lab March 7
-
--   DataFest: April 4 - 6 - <https://dukestatsci.github.io/datafest/>
-
 ## Computing set up
 
 ```{r}
@@ -54,8 +40,6 @@ library(tidyverse)
 library(tidymodels)  
 library(knitr)       
 library(patchwork)
-library(GGally)   # for pairwise plot matrix
-library(corrplot) # for correlation matrix
 
 # set default theme in ggplot2
 ggplot2::theme_set(ggplot2::theme_bw())
@@ -63,109 +47,452 @@ ggplot2::theme_set(ggplot2::theme_bw())
 
 ## Topics
 
--   Multicollinearity
+-   Log-transformation on the response
+-   Log-transformation on the predictor
 
-    -   Recap
+# Variable transformations
 
-    -   How to deal with issues of multicollinearity
-
-## Data: Trail users {.midi}
-
--   The Pioneer Valley Planning Commission (PVPC) collected data at the beginning a trail in Florence, MA for ninety days from April 5, 2005 to November 15, 2005.
--   Data collectors set up a laser sensor, with breaks in the laser beam recording when a rail-trail user passed the data collection station.
+## Data: Life expectancy in 140 countries
 
 ```{r}
 #| echo: false
-#| message: false
-#| warning: false
 
-rail_trail <- read_csv(here::here("slides", "data/rail_trail.csv"))
-rail_trail |> slice(1:5)
+library(readxl)
+
+health_data <- read_xlsx("data/life-expectancy-data.xlsx") |>
+  rename(life_exp = `Life_expectancy_at_birth`, 
+         income_inequality = `Income_inequality_Gini_coefficient`,
+         health_expenditure = Health_expenditure) |>
+  mutate(education = if_else(Education_Index > median(Education_Index), "High", "Low"), 
+         education = factor(education, levels = c("Low", "High")))
+
 ```
 
-Source: [Pioneer Valley Planning Commission](http://www.fvgreenway.org/pdfs/Northampton-Bikepath-Volume-Counts%20_05_LTA.pdf) via the **mosaicData** package.
+The data set comes from @zarulli2021 who analyze the effects of a country's healthcare expenditures and other factors on the country's life expectancy. The data are originally from the [Human Development Database](http://hdr.undp.org/en/data) and [World Health Organization](https://apps.who.int/nha/database/).
+
+There are `r nrow(health_data)` countries (observations) in the data set.
+
+::: aside
+[Click here](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0253450) for the original research paper.
+:::
+
+
+
+## Variables 
+
+-   `life_exp`: The average number of years that a newborn could expect to live, if he or she were to pass through life exposed to the sex- and age-specific death rates prevailing at the time of his or her birth, for a specific year, in a given country, territory, or geographic income_inequality. ( from the [World Health Organization](https://www.who.int/data/gho/indicator-metadata-registry/imr-details/65#:~:text=Definition%3A,%2C%20territory%2C%20or%20geographic%20area.))
+
+-   `income_inequality`: Measure of the deviation of the distribution of income among individuals or households within a country from a perfectly equal distribution. A value of 0 represents absolute equality, a value of 100 absolute inequality (based on Gini coefficient). (from @zarulli2021)
 
 ## Variables
 
-**Outcome**:
+-   `education`: Indicator of whether a country’s education index is above (`High`) or below (`Low`) the median index for the 140 countries in the data set.
 
--   `volume` estimated number of trail users that day (number of breaks recorded)
+    -   Education index: *Average of mean years of schooling (of adults) and expected years of school (of children), both expressed as an index obtained by scaling wit the corresponding maxima.*
 
-**Predictors**
+-   `health_expend`: Per capita current spending on on healthcare good sand services, expressed in respective currency - international Purchasing Power Parity (PPP) dollar ([from the World Health Organization](https://www.who.int/data/gho/indicator-metadata-registry/imr-details/4952))
 
--   `hightemp` daily high temperature (in degrees Fahrenheit)
-
--   `avgtemp` average of daily low and daily high temperature (in degrees Fahrenheit)
-
--   `season` one of “Fall”, “Spring”, or “Summer”
-
--   `precip` measure of precipitation (in inches)
-
-## EDA: Relationship between predictors {.midi}
+## Exploratory data analysis
 
 ```{r}
 #| echo: false
 #| fig-align: center
 
-rail_trail |>
-  select(hightemp, avgtemp, season, precip) |>
-  ggpairs()
+ggplot(data = health_data, aes(x = health_expenditure)) + 
+  geom_histogram(fill = "steelblue", color = "black") + 
+  labs(x = "",
+       title = "Healthcare expenditure")
 ```
 
+## Exploratory data analysis
 
-## Multicollinearity
-
--   **Multicollinearity**: near-linear dependence among predictors
-
-- The **variance inflation factor (VIF)** measures how much the linear dependencies impact the variance of the predictors
-
-$$
-VIF_{j} = \frac{1}{1 - R^2_j}
-$$
-
-where $R^2_j$ is the proportion of variation in $x_j$ that is explained by a linear combination of all the other predictors
-
-- Thresholds: 
-  - VIF > 10: concerning multicollinearity 
-  - VIF > 5: potentially worth further investigation
-
-## How multicollinearity impacts model {.midi}
-
--   Large variance for the model coefficients that are collinear
-
-    -   Different combinations of coefficient estimates produce equally good model fits
-
--   Unreliable statistical inference results
-
-    -   May conclude coefficients are not statistically significant when there is, in fact, a relationship between the predictors and response
-
--   Interpretation of coefficient is no longer "holding all other variables constant", since this would be impossible for correlated predictors
+**The goal is to use income inequality and education to understand variability in health expenditure** 
 
 
-## Dealing with multicollinearity
+```{r}
+#| echo: false
+#| fig-align: center
+
+p1 <- ggplot(data = health_data, aes(x = income_inequality, y = health_expenditure)) + 
+  geom_point() + 
+  labs(x = "Income inequality",
+       y = "Healthcare expenditure")
+
+p2 <- ggplot(data = health_data, aes(x = education, y = health_expenditure)) + 
+  geom_boxplot(fill = "steelblue", color = "black") + 
+  labs(x = "Education",
+       y = "Healthcare expenditure")
+
+p1 + p2 + plot_annotation(
+  title = 'Healthcare expenditure vs. predictors')
+```
+
+## Original model
+
+```{r}
+health_fit <- lm(health_expenditure ~ income_inequality + education, 
+                     data = health_data)
+```
+```{r}
+#| echo: false
+
+tidy(health_fit) |>
+  kable(digits = 3)
+```
+
+## Original model: Residuals vs. fitted
+
+```{r echo=FALSE}
+health_aug <- augment(health_fit)
+
+resid_orig <- ggplot(data = health_aug, aes(x = .fitted, y = .resid)) +
+  geom_point(alpha = 0.7) + 
+  geom_hline(yintercept = 0,color = "red", linetype. = 2) + 
+  labs(x = "Predicted", y = "Residuals", 
+       title = "Original model: Residuals vs. Predicted")
+
+resid_orig
+```
+
+::: question
+What model assumption(s) appear to be violated?
+:::
+
+## Consider different transformations...
+
+```{r}
+#| echo: false
+
+p1 <- ggplot(data=health_data, aes(x=income_inequality, y=health_expenditure)) +
+  geom_point(alpha = 0.7) + 
+  geom_smooth(method = "lm") +
+  labs(x = "Original")
+
+p2 <- ggplot(data=health_data, aes(x=income_inequality, y=log(health_expenditure))) +
+  geom_point(alpha = 0.7) + 
+  geom_smooth(method = "lm") + 
+    labs(y = "log(health_expenditure)",
+         title = "Log-transformed response",
+         
+    )
+p3 <- ggplot(data=health_data, aes(x=log(income_inequality), y=health_expenditure)) +
+  geom_point(alpha = 0.7) + 
+  geom_smooth(method = "lm") + 
+    labs(x = "log(income_inequality)",
+        title = "Log-transformed predictor")
+  
+p4 <- ggplot(data=health_data, aes(x=log(income_inequality), y=log(health_expenditure))) +
+  geom_point(alpha = 0.7) + 
+  geom_smooth(method = "lm") + 
+    labs(x = "log(income_inequality)", y = "log(health_expenditure)")
+  
+(p1 + p2) / (p3 + p4)
+```
+
+# Transformation on $Y$
+
+## Identifying a need to transform Y {.midi}
 
 ::: incremental
--   Collect more data (often not feasible given practical constraints)
+-   Typically, a “fan-shaped” residual plot indicates the need for a transformation of the response variable Y
 
--   Redefine the correlated predictors to keep the information from predictors but eliminate collinearity
+    -   There are multiple ways to transform a variable, e.g., $Y$, $1/Y$, $\log(Y)$ . These are called **variance stabilizing transformations**
 
-    -   e.g., if $x_1, x_2, x_3$ are correlated, use a new variable $(x_1 + x_2) / x_3$ in the model
+    -   $\log(Y)$ the most straightforward to interpret, so we use that transformation when possible
 
--   For categorical predictors, avoid using levels with very few observations as the baseline
+<!-- -->
 
--   Remove one of the correlated variables
+-   When building a model:
 
-    -   Be careful about substantially reducing predictive power of the model
+    -   Choose a transformation and build the model on the transformed data
+
+    -   Reassess the residual plots
+
+    -   If the residuals plots did not sufficiently improve, try a new transformation!
 :::
 
-# Application exercise
+## Log transformation on $Y$
 
-::: appex
-📋 [sta221-sp25.netlify.app/ae/ae-04-multicollinearity.html](../ae/ae-04-multicollinearity.html)
+-   If we apply a log transformation to the response variable, we want to estimate the parameters for the statistical model
 
-Part 2
+$$
+\log(\mathbf{Y}) = \mathbf{X}\boldsymbol{\beta} + \boldsymbol{\epsilon}, \quad \boldsymbol{\epsilon} \sim N(\mathbf{0}, \sigma^2_{\epsilon}\mathbf{I})
+$$
+
+-   The regression equation is
+
+$$\widehat{\log(\mathbf{Y})} = \mathbf{X}\hat{\boldsymbol{\beta}}$$
+
+## Log transformation on $Y$
+
+We fit the model in terms of $\log(\mathbf{Y})$ but want to interpret the model in terms of the original variable $Y$ , so we need to write the regression equation in terms of $Y$
+
+$$
+\begin{aligned}
+&\widehat{\log(\mathbf{Y})} = \mathbf{X}\hat{\boldsymbol{\beta}} \\[8pt]
+\Rightarrow \quad &\hat{\mathbf{Y}} = e^{\mathbf{X}\hat{\boldsymbol{\beta}}}
+\end{aligned}
+$$
+
+
+
+## Model interpretation {.midi}
+
+$$\begin{align}\hat{y_i} &=  e^{\mathbf{x}_i\hat{\boldsymbol{\beta}}} \\ & = e^{(\hat{\beta}_0 + \hat{\beta}_1 x_{i1} + \dots + \hat{\beta}_Px_{ip})} \\ 
+&= e^{\hat{\beta}_0}e^{\hat{\beta}_1x_{i1}}\dots e^{\hat{\beta}_px_{ip}}\end{align}$$
+
+. . .
+
+-   **Intercept**: When $x_{i1} = \dots = x_{ip} =0$, $y_i$ is expected to be $e^{\hat{\beta}_0}$
+
+-   **Coefficient of $X_j$:** For every one unit increase in $x_{ij}$, $y_{i}$ is expected to multiply by a factor of $e^{\hat{\beta}_j}$, holding all else constant.
+
+## Model with log(Y)
+
+```{r}
+#| echo: false
+#fit model
+health_logy_fit <- lm(log(health_expenditure) ~ income_inequality + education, 
+                      data = health_data)
+
+tidy(health_logy_fit) |>
+  kable(digits = 3)
+```
+
+<br>
+
+::: question
+Interpret each of the following in terms of health expenditure
+
+-   Intercept
+
+-   `income_inequality`
+
+-   `education`
 :::
 
-# Variable transformations
+## Model with log(Y): Residuals
+
+```{r echo=F}
+health_logy_aug <- augment(health_logy_fit)
+
+resid_logy <- ggplot(data = health_logy_aug, aes(x = .fitted, y = .resid)) +
+  geom_point(alpha = 0.7) + 
+  geom_hline(yintercept=0, color="red") +
+  labs(x="Predicted", y="Residuals",
+       title="Model 2: Residuals vs. Predicted")
+
+resid_logy
+```
+
+## Compare residual plots
+
+```{r}
+#| echo: false
+
+resid_orig + resid_logy
+```
+
+# Log transformation on a predictor variable
+
+## Variability in life expectancy 
+
+Now let's consider a model using a country's healthcare expenditure, income inequality, and education to predict its life expectancy
+
+```{r}
+#| echo: false
+#| fig-align: center
+
+p1 <- ggplot(data = health_data, aes(x = health_expenditure, y = life_exp)) + 
+  geom_point() + 
+  labs(x = "Healthcare expenditure",
+       y = "Life expectancy")
+
+p2 <- ggplot(data = health_data, aes(x = income_inequality, y = life_exp)) + 
+  geom_point() + 
+  labs(x = "Income inequality",
+       y = "Life expectancy")
+
+p3 <- ggplot(data = health_data, aes(x = education, y = life_exp)) + 
+  geom_boxplot() + 
+  labs(x = "Education",
+       y = "Life expectancy")
+
+
+p1 + p2 + p3
+```
+
+## Original model 
+
+```{r}
+life_exp_fit <- lm(life_exp ~ health_expenditure + income_inequality + education, 
+                   data = health_data)
+```
+
+```{r}
+#| echo: false
+tidy(life_exp_fit) |>
+  kable(digits = 3)
+```
+
+## Original model: Residuals
+
+```{r}
+#| echo: false
+
+life_exp_aug <- augment(life_exp_fit)
+
+life_exp_resid <- ggplot(data = life_exp_aug, aes(x = .fitted, y = .resid)) +
+  geom_point(alpha = 0.7) + 
+  geom_hline(yintercept=0, color="red") +
+  labs(x="Predicted", y="Residuals",
+       title="Residuals vs. Predicted")
+
+life_exp_resid
+```
+
+## Residuals vs. predictors 
+
+```{r}
+#| echo: false
+#| fig-align: center
+resid1 <-  ggplot(data = life_exp_aug, aes(x = health_expenditure, y = .resid)) +
+  geom_point(alpha = 0.7) + 
+  geom_hline(yintercept=0, color="red") +
+  labs(x="Health expenditure", y="Residuals",
+       title="")
+
+resid2 <-  ggplot(data = life_exp_aug, aes(x = income_inequality, y = .resid)) +
+  geom_point(alpha = 0.7) + 
+  geom_hline(yintercept=0, color="red") +
+  labs(x="Income inequality", y="Residuals",
+       title="")
+
+resid3 <-  ggplot(data = life_exp_aug, aes(x = education, y = .resid)) +
+  geom_boxplot() + 
+  geom_hline(yintercept=0, color="red") +
+  labs(x="Education", y="Residuals",
+       title="")
+
+resid1 + resid2 + resid3 + plot_annotation(title = "Residuals vs. predictors")
+
+
+```
+
+. . .
+
+::: question
+The non-linear relationship is between health expenditure and life expectancy.
+:::
+
+## Log Transformation on $X$
+
+Try a transformation on $X$ if the scatterplot in EDA shows non-linear relationship and residuals vs. predictor make parabola
+
+```{r}
+#| echo: false
+#| fig-align: center
+
+
+p1 <- ggplot(data = health_data, aes(x = health_expenditure, y = life_exp)) + 
+  geom_point() + 
+  labs(x = "Healthcare expenditure",
+       y = "Life expectancy",
+       title = "EDA")
+
+resid1 <-  ggplot(data = life_exp_aug, aes(x = health_expenditure, y = .resid)) +
+  geom_point(alpha = 0.7) + 
+  geom_hline(yintercept=0, color="red") +
+  labs(x="Health expenditure", y="Residuals",
+       title="Residuals")
+
+p1 + resid1 + plot_annotation(title = "Health expenditure ")
+```
+
+## Model with Transformation on $X_j$ {.midi}
+
+If we fit a model with predictor $\log(X_j)$, We fit a model of the form:
+
+$$
+\mathbf{Y} = \mathbf{X}\boldsymbol{\beta} + \boldsymbol{\epsilon}, \quad \boldsymbol{\epsilon} \sim N(\mathbf{0}, \sigma^2_{\epsilon}\mathbf{I})
+$$
+
+such that $\mathbf{X}$ has a column for $\log(X_j)$ .
+
+. . .
+
+The estimated regression model is 
+
+$$
+\begin{aligned}
+\hat{\mathbf{Y}} &= \mathbf{X}\hat{\boldsymbol{\beta}} \\[8pt]
+\Rightarrow \quad &\hat{y}_i = \hat{\beta}_0 + \hat{\beta}_1x_{i1} + \ldots + \hat{\beta}_j\log(x_{ij}) + \dots + \hat{\beta}_px_{ip} 
+\end{aligned}
+$$
+
+## Model interpretation {.midi}
+
+$$
+\hat{y}_i = \hat{\beta}_0 + \hat{\beta}_1x_{i1} + \ldots + \hat{\beta}_j\log(x_{ij}) + \dots + \hat{\beta}_px_{ip} 
+$$
+
+::: incremental
+-   **Intercept:** When $x_{i1} = \dots = \log(x_{ij}) = \dots = x_{ip} = 0$ , $y_i$ is expected to be $\hat{\beta}_0$, on average, holding all else constant.
+
+    -   $\log(x_{ij}) = 0$ when $x_{ij} = 1$
+
+-   **Coefficient of** $X_j$**:** When $x_{ij}$ is multiplied by a factor of $C$, $y_i$ is expected to change by $\hat{\beta}_1\log(C)$ units, on average, holding all else constant.
+
+    -   **Example**: When $x_{ij}$ is multiplied by a factor of 2, $y_i$ is expected to increase by $\hat{\beta}_1\log(2)$ units, on average, holding all else constant.
+:::
+
+## Model with log(X) {.midi}
+
+```{r}
+life_exp_logx_fit <- lm(life_exp ~ log(health_expenditure) + income_inequality + education, 
+                        data = health_data)
+
+```
+
+```{r}
+#| echo: false
+
+tidy(life_exp_logx_fit) |>
+  kable(digits = 3)
+```
+
+<br>
+
+::: question
+-   Interpret the intercept in the context of the data.
+
+-   Interpret the effect of health expenditure in the context of the data.
+
+-   Interpret the effect of education in the context of the data.
+:::
+
+## Model with log(X): Residuals
+
+```{r}
+#| echo: false
+life_exp_logx_aug <- augment(life_exp_logx_fit)
+
+resid_logx <- ggplot(data = life_exp_logx_aug, aes(x = .fitted, y = .resid)) +
+  geom_point(alpha = 0.7) + 
+  geom_hline(yintercept=0, color="red") +
+  labs(x="Predicted", y="Residuals",
+       title="Model 3: Residuals vs. Predicted")
+
+resid_logx
+```
+
+## Learn more
+
+See [Log Transformations in Linear Regression](https://github.com/sta210-sp20/supplemental-notes/blob/master/log-transformations.pdf) for more details about interpreting regression models with log-transformed variables.
+
+## Recap
+
+-   Log-transformation on the response
+-   Log-transformation on the predictor
 
 ## References
