--- a/hw/references.bib
+++ b/hw/references.bib
@@ -131,3 +131,11 @@
   year={2021},
   publisher={John Wiley \& Sons}
 }
+
+@article{warwick1994population,
+  title={The Population Biology of Abalone (Haliotis species) in Tasmania. I. Blacklip Abalone (H. rubra) from the North Coast and Islands of Bass Strait. Sea Fisheries Division},
+  author={Warwick, JN and Sellers, TL and Talbot, SR and Cawthorn, AJ and Ford, WB},
+  journal={Sea Fisheries Division, Technical},
+  number={48},
+  year={1994}
+}
